--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body {
     height: 100%;
     background: url("photo.jpg") center/cover no-repeat;
     position: relative;
-    color: white;
+    color: rgb(239, 73, 73);
 }
 
 .lock::after {
@@ -68,7 +68,7 @@ body {
 }
 
 .notification {
-    background: rgba(255,255,255,0.95);
+    background: rgba(230, 38, 38, 0.95);
     color: #000;
     margin: 40px 16px;
     padding: 14px;
@@ -103,16 +103,16 @@ body {
 
 .card {
     width: 85%;
-    background: rgba(255,255,255,0.2);
+    background: rgba(228, 48, 48, 0.2);
     border-radius: 26px;
     padding: 26px;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
 /* ---------- APP ---------- */
 .app {
-    background: #f5f5f7;
+    background: #5f0435;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -121,7 +121,7 @@ body {
 /* Navigation bar */
 .nav {
     height: 50px;
-    background: #f5f5f7;
+    background: #b6068d;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -261,8 +261,8 @@ button {
 const messages = [
  "გამარჯობა ჩემო სიცოცხლევ ❤️",
  "დღეს მთელი დღე შენზე ვფიქრობდი…",
- "ვიცი რომ შეიძლება უცნაურია 😅",
- "მაგრამ შენ ჩემთვის ძალიან მნიშვნელოვანი ხარ",
+ "ვიცი გითხარი, ამას ვერ ვიზამდი თქო მარა მაინც გავაკეთე :დ 😅",
+ "შენ ჩემთვის ძალიან მნიშვნელოვანი ხარ",
  "და მინდა გკითხო რაღაც…"
 ];
 
